fix: 修复粒子特效和游戏启动等问题

--- a/index.html
+++ b/index.html
@@ -2,24 +2,79 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>贪吃蛇小游戏</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>贪吃蛇小游戏</h1>
-    <canvas id="gameCanvas" width="600" height="600"></canvas>
-    <div class="controls">
-        <button id="startBtn">开始游戏</button>
-        <button id="pauseBtn">暂停</button>
-        <button id="restartBtn">重新开始</button>
-        <button id="showInstructionsBtn">游戏说明</button>
+    <div id="mode-select">
+        <button id="normalModeBtn">普通模式</button>
+        <button id="battleModeBtn">对战模式</button>
+        <button id="fogModeBtn">迷雾模式</button>
     </div>
-    <div id="score">分数：0</div>
+    <div id="game-area" style="display:none;">
+        <button id="backToModeBtn">返回模式选择</button>
+        <canvas id="gameCanvas" width="600" height="600"></canvas>
+        <div class="controls">
+            <button id="startBtn">开始游戏</button>
+            <button id="pauseBtn">暂停</button>
+            <button id="restartBtn">重新开始</button>
+            <button id="showInstructionsBtn">游戏说明</button>
+        </div>
+        <div id="score">分数：0</div>
+        <div id="mobile-controls">
+            <div class="mobile-row">
+                <button class="mobile-btn" id="mobile-up">▲</button>
+            </div>
+            <div class="mobile-row">
+                <button class="mobile-btn" id="mobile-left">◀</button>
+                <button class="mobile-btn" id="mobile-down">▼</button>
+                <button class="mobile-btn" id="mobile-right">▶</button>
+            </div>
+        </div>
+    </div>
     <script src="snake.js"></script>
     <script>
+    // 模式选择逻辑
+    document.getElementById('normalModeBtn').onclick = function() {
+        window.gameMode = 'normal';
+        document.getElementById('mode-select').style.display = 'none';
+        document.getElementById('game-area').style.display = '';
+        if (typeof initGame === 'function') initGame();
+    };
+    document.getElementById('battleModeBtn').onclick = function() {
+        window.gameMode = 'battle';
+        document.getElementById('mode-select').style.display = 'none';
+        document.getElementById('game-area').style.display = '';
+        if (typeof initGame === 'function') initGame();
+    };
+    document.getElementById('fogModeBtn').onclick = function() {
+        window.gameMode = 'fog';
+        document.getElementById('mode-select').style.display = 'none';
+        document.getElementById('game-area').style.display = '';
+        if (typeof initGame === 'function') initGame();
+    };
     document.getElementById('showInstructionsBtn').onclick = function() {
-        alert(`操作说明：\n\n- 方向键或WASD控制移动\n- 空格键：暂停/继续\n- 开始游戏：点击"开始游戏"按钮\n- 暂停：点击"暂停"按钮或按空格\n- 重新开始：点击"重新开始"按钮\n- 贪吃蛇可以穿墙\n- 黄色豆子：普通食物，吃到加分\n- 红色豆子：死亡豆子，吃到直接死亡\n- 绿色豆子：减速豆，吃到后贪吃蛇速度变慢\n- 紫色豆子：反向豆，吃到后方向键反向10秒`);
+        alert(`操作说明：\n\n- 方向键或WASD控制移动\n- 空格键：暂停/继续\n- 开始游戏：点击"开始游戏"按钮\n- 暂停：点击"暂停"按钮或按空格\n- 重新开始：点击"重新开始"按钮\n- 贪吃蛇可以穿墙\n- 黄色豆子：普通食物，吃到加分\n- 红色豆子：死亡豆子，吃到直接死亡\n- 绿色豆子：减速豆，吃到后贪吃蛇速度变慢（仅对玩家生效）\n- 紫色豆子：反向豆，吃到后方向键反向10秒\n\n【对战模式说明】\n- 场上会出现2条AI蛇，颜色与玩家不同，长度固定，移动速度与玩家相同\n- 玩家头碰AI蛇头会死亡\n- 玩家身体或AI蛇头碰撞，AI蛇死亡并加5分\n- AI蛇会穿墙，死亡后自动补充新AI蛇`);
+    };
+    // 移动端虚拟按键事件
+    document.getElementById('mobile-up').onclick = function() {
+        window.dispatchEvent(new KeyboardEvent('keydown', {key: 'ArrowUp'}));
+    };
+    document.getElementById('mobile-down').onclick = function() {
+        window.dispatchEvent(new KeyboardEvent('keydown', {key: 'ArrowDown'}));
+    };
+    document.getElementById('mobile-left').onclick = function() {
+        window.dispatchEvent(new KeyboardEvent('keydown', {key: 'ArrowLeft'}));
+    };
+    document.getElementById('mobile-right').onclick = function() {
+        window.dispatchEvent(new KeyboardEvent('keydown', {key: 'ArrowRight'}));
+    };
+    document.getElementById('backToModeBtn').onclick = function() {
+        document.getElementById('game-area').style.display = 'none';
+        document.getElementById('mode-select').style.display = '';
+        window.location.reload(); // 刷新页面重置所有状态
     };
     </script>
 </body>
